# crewai-meta-agents007

./: .gitignore  README.md
meta_agents_007/: README.md  pyproject.toml
meta_agents_007/db/: chroma.sqlite3
meta_agents_007/src/meta_agents_007/: crew.py  main.py
meta_agents_007/src/meta_agents_007/config/: agents.yaml  tasks.yaml
meta_agents_007/src/meta_agents_007/tools/: builtin_tools.py
